# aio-amazon-ads

./: ARCHITECTURE.md  CHANGELOG.md  CI_STATUS.md  CONTRIBUTING.md  LICENSE  PACKAGE_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md
examples/: marketplace_usage.py
src/aio_amazon_ads/: __init__.py  base.py  client.py  exceptions.py  validation.py
src/aio_amazon_ads/models/: __init__.py  sp.py
src/aio_amazon_ads/services/portfolios/: __init__.py  portfolios.py
src/aio_amazon_ads/services/profiles/: profiles.py
src/aio_amazon_ads/services/sb/: __init__.py  ad_groups.py  ads.py  campaigns.py  keywords.py
src/aio_amazon_ads/services/sd/: __init__.py  ad_groups.py  campaigns.py
src/aio_amazon_ads/services/sp/: __init__.py  ad_groups.py  campaigns.py  keywords.py  negative_keywords.py  product_ads.py  reports.py  targets.py
src/amzn_ads/: __init__.py  base.py  client.py
src/amzn_ads/services/sp/: __init__.py  keywords.py  negative_keywords.py  reports.py  targets.py
tests/: conftest.py
tests/unit/: test_client.py  test_http.py  test_pagination.py  test_sb_sd_endpoints.py  test_sp_endpoints.py  test_validation.py
